public class Barrier extends Particle {
    public Barrier(int index) {
        super(Material.BARRIER, index);
    }
}
