public class Empty extends Particle {
    public Empty(int index) {
        super(Material.EMPTY, index);
    }
}
