import GUI.PowderGameWindow;

public class Main {
    public static void main(String[] args) {
        PowderGameWindow.main(args);
    }
}
